--- a/final/templates/analysis.html
+++ b/final/templates/analysis.html
@@ -20,27 +20,23 @@ Sleep Log: <br>
 // var xValues = [50,60,70,80,90,100,110,120,130,140,150];
 // var yValues = [7,8,8,9,9,9,10,11,14,14,15];
 
-var xValues = {{time}}
-
-var yValues = {{hours}}
-
-
 new Chart("myChart", {
   type: "line",
   data: {
-    labels: xValues,
+    labels: {{time | safe}},
     datasets: [{
+      label : "Data points",
+      data : {{ hours | safe}},
       fill: false,
       lineTension: 0,
       backgroundColor: "rgba(0,0,255,1.0)",
       borderColor: "rgba(0,0,255,0.1)",
-      data: yValues
     }]
   },
   options: {
     legend: {display: false},
     scales: {
-      yAxes: [{ticks: {min: 6, max:16}}],
+      yAxes: [{ticks: {min: 0, max:24}}],
     }
   }
 });
