--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -11,17 +11,17 @@
     </div>
 
     <div class="mb-3">
-        <label for="formGroupExampleInput" class="form-label">how many hours did you sleep last night?</label>
+        <label for="formGroupExampleInput" class="form-label"><b>how many hours did you sleep last night?</b></label>
         <input type="text" class="form-control" id="hours_slept" name="hours_slept" placeholder="input a number!">
     </div>
     <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">how many times did you snooze your alarm this morning? (hint: dont lie!)</label>
+        <label for="formGroupExampleInput2" class="form-label"><b>how many times did you snooze your alarm this morning? (hint: dont lie!)</b></label>
         <input type="text" class="form-control" id="snoozes" name="snoozes" placeholder="input a number!">
     </div>
     <!--something for sleep quality and sleeping mood-->
     <!--sleep quality-->
     <div class="mb-3">
-        <p>How was your sleep last night?</p>
+        <p><b>How was your sleep last night?</b></p>
         <input type="radio" id="sleep" name="sleep" value="1">
         <label for="html">BEST NIGHT EVER!</label>
         <input type="radio" id="sleep" name="sleep" value="2">
@@ -35,7 +35,7 @@
  
     </div>
     <div class="mb-3">
-        <p>Your morning mood?</p>
+        <p><b>Your morning mood?</b></p>
         <input type="radio" id="vibe" name="vibe" value="10">
         <label for="html">&#128518</label>
         <input type="radio" id="vibe" name="vibe" value="11">
@@ -51,7 +51,7 @@
         
     </div>
     <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">what are your goals for today?</label>
+        <label for="formGroupExampleInput2" class="form-label"><b>what are your goals for today?</b></label>
         <input type="text" class="form-control" id="daily_goals" name="daily_goals" placeholder="be brave, be bold, and be courageous!">
     </div> 
     <!-- <div class="mb-3">
@@ -63,7 +63,7 @@
         <input type="text" class="form-control" id="mood" name="mood" placeholder="be brave, be bold, and be courageous!">
     </div> -->
     <div class="mb-3">
-        <label for="formGroupExampleInput2" class="form-label">did you have a dream last night? do you remember it?</label>
+        <label for="formGroupExampleInput2" class="form-label"><b>did you have a dream last night? do you remember it?</b></label>
         <input type="text" class="form-control" id="dream" name="dream" placeholder="record your dream last night if you remember :)">
     </div>
     </div>
