--- a/final/templates/change_password.html
+++ b/final/templates/change_password.html
@@ -13,6 +13,6 @@
         <div class="mb-3">
             <input class="form-control mx-auto w-auto" id="new_password_confirmation" name="new_password_confirmation" placeholder="confirm new password" type="text">
         </div>
-        <button class="btn btn-primary" type="submit">Change Password</button>
+        <button class="btn btn-primary buttonStyle" type="submit">change password</button>
     </form>
 {% endblock %}
