--- a/final/templates/get_resources.html
+++ b/final/templates/get_resources.html
@@ -34,7 +34,7 @@
                     <input type="checkbox" name="tips" value="music">music for sleeping<br>
                     <input type="checkbox" name="tips" value="dreams">understanding dreams<br>           
                     <br>      
-                    <button class="btn btn-primary" type="submit">get some resources!</button>     
+                    <button class="btn btn-primary buttonStyle" type="submit">get some resources!</button>     
                 </fieldset>
             </form>
         </div>
