--- a/final/templates/resources.html
+++ b/final/templates/resources.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block main %}
+    <h4 class=header2>we hope these help!</h4>
     <table class="styled-table center">
         <tbody>
         {% for tips in tips %}
