--- a/final/static/styles.css
+++ b/final/static/styles.css
@@ -104,3 +104,10 @@ canvas
     margin-left: auto;
     margin-right: auto;
 }
+
+input[type="text"]
+{
+    width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
