--- a/final/templates/home.html
+++ b/final/templates/home.html
@@ -9,7 +9,7 @@
         <br>
         <h4 class=header2>this is SleepS50</h4>
             <div>
-               <p>
+               <p class="margins">
                     welcome! we're here to help you improve your sleep and well-being, one night at a time. all you need to do is log your data every morning, and we'll help you track your progress. register or log in to get started!
                </p>
             </div>
@@ -24,6 +24,5 @@
                   </div>
                 </div>
               </div>
-    
     </div>
 {% endblock %}
