--- a/final/templates/log.html
+++ b/final/templates/log.html
@@ -6,8 +6,8 @@
 
 {% block main %}
     {% for diary in diarys %}
-    <div class="card">
-        <div class="card-header">
+    <div class="card margins">
+        <div class="card-header" style="background-color:#FFF3CD">
           <b>{{diary.time}}</b>
         </div>
         <div class="card-body">
