--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h4 class=header2>it's a new day, {{name}}! how was last night?</h4>
+    <h4 class=header2>it's a new day, {{username}}! how was last night?</h4>
     <br>
     <form action="/diary" method="post">
         <div class="mb-3">
@@ -16,8 +16,6 @@
             <label for="formGroupExampleInput2" class="form-label"><b>how many times did you snooze your alarm this morning? (hint: dont lie!)</b></label>
             <input type="text" class="form-control" id="snoozes" name="snoozes" placeholder="input a number!">
         </div>
-        <!--something for sleep quality and sleeping mood-->
-        <!--sleep quality-->
         <div class="mb-3">
             <p><b>how was your sleep last night?</b></p>
             <input type="radio" id="sleep" name="sleep" value="1">
