--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h4 class=header2>it's a new day, {{username}}! how was last night?</h4>
+    <h4 class=header2>good morning ☀️ it's a new day! <br>how was last night? 👀</h4>
     <br>
     <form action="/diary" method="post">
         <div class="mb-3">
