--- a/final/templates/analysis.html
+++ b/final/templates/analysis.html
@@ -62,12 +62,11 @@
         }]
       },
       options: {
-        legend: {display: false},
-        title: {
-          display: true,
-          text: ""
-        }
+      legend: {display: false},
+      scales: {
+        yAxes: [{ticks: {min: 0}}],
       }
+    }
     });
     </script><br>
 
