--- a/final/templates/analysis.html
+++ b/final/templates/analysis.html
@@ -9,10 +9,10 @@
   <h4 class=header2>how has your sleep been?</h4>
 
   <br>
-    <p>average hours slept: {{avg_hours}}</p>
-    <p>average snoozes: {{avg_snoozes}}</p>
+    <p><b>average hours slept:</b> {{avg_hours}}</p>
+    <p><b>average snoozes:</b> {{avg_snoozes}}</p>
   <br>
-    <p>sleep log:</p>
+    <p><b>sleep log:</b></p>
 
   <!DOCTYPE html>
   <html>
@@ -45,7 +45,7 @@
   </script> <br>
 
   <br>
-    <p>sleep quality log:</p>
+    <p><b>sleep quality log:</b></p>
   <canvas id="sleepquality" style="width:100%;max-width:600px"></canvas>
   <script>
     var xValues = ["BEST NIGHT EVER \^_^/ !!", "good", "eh... it was okay ", "not so great", "didn't sleep a Wink T_T"];
@@ -71,7 +71,7 @@
     </script><br>
 
   <br>
-    <p>morning mood log:</p>
+    <p><b>morning mood log:</b></p>
   <canvas id="moodlog" style="width:100%;max-width:600px"></canvas>
   <script>
     var jValues = ["excited", "happy", "ok", "sleepy", "sad", "tired"];
