--- a/final/templates/diary.html
+++ b/final/templates/diary.html
@@ -9,15 +9,15 @@
     <br>
     <form action="/diary" method="post">
         <div class="mb-3">
-            <label for="formGroupExampleInput" class="form-label"><b>how many hours did you sleep last night?</b></label>
+            <label for="formGroupExampleInput" class="form-label"><b>how many hours did you sleep last night? *</b></label>
             <input type="text" class="form-control" id="hours_slept" name="hours_slept" placeholder="input a number!">
         </div>
         <div class="mb-3">
-            <label for="formGroupExampleInput2" class="form-label"><b>how many times did you snooze your alarm this morning? (hint: dont lie!)</b></label>
+            <label for="formGroupExampleInput2" class="form-label"><b>how many times did you snooze your alarm this morning? * (hint: dont lie! 🙈)</b></label>
             <input type="text" class="form-control" id="snoozes" name="snoozes" placeholder="input a number!">
         </div>
         <div class="mb-3">
-            <p><b>how was your sleep last night?</b></p>
+            <p><b>how was your sleep last night? *</b></p>
             <input type="radio" id="sleep" name="sleep" value="1">
             <label for="html">BEST NIGHT EVER!</label>
             <input type="radio" id="sleep" name="sleep" value="2">
@@ -31,7 +31,7 @@
     
         </div>
         <div class="mb-3">
-            <p><b>your morning mood?</b></p>
+            <p><b>your morning mood? *</b></p>
             <input type="radio" id="vibe" name="vibe" value="10">
             <label for="html">&#128518</label>
             <input type="radio" id="vibe" name="vibe" value="11">
