--- a/final/templates/change_password.html
+++ b/final/templates/change_password.html
@@ -8,10 +8,10 @@
     <p>insert a new password!</p> 
     <form action="/change_password" method="post">
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="new_password" name="new_password" placeholder="new password" type="text">
+            <input class="form-control mx-auto w-auto" id="new_password" name="new_password" placeholder="new password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="new_password_confirmation" name="new_password_confirmation" placeholder="confirm new password" type="text">
+            <input class="form-control mx-auto w-auto" id="new_password_confirmation" name="new_password_confirmation" placeholder="confirm new password" type="password">
         </div>
         <button class="btn btn-primary buttonStyle" type="submit">change password</button>
     </form>
