--- a/final/templates/register.html
+++ b/final/templates/register.html
@@ -10,10 +10,10 @@
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="username" type="text">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="password" type="text">
+            <input class="form-control mx-auto w-auto" id="password" name="password" placeholder="password" type="password">
         </div>
         <div class="mb-3">
-            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="verify password" type="text">
+            <input class="form-control mx-auto w-auto" id="confirmation" name="confirmation" placeholder="verify password" type="password">
         </div>
         <button class="btn btn-primary buttonStyle" type="submit">register</button>
     </form>
