--- a/final/templates/analysis.html
+++ b/final/templates/analysis.html
@@ -48,7 +48,7 @@
     <p><b>sleep quality log:</b></p>
   <canvas id="sleepquality" style="width:100%;max-width:600px"></canvas>
   <script>
-    var xValues = ["BEST NIGHT EVER \^_^/ !!", "good", "eh... it was okay ", "not so great", "didn't sleep a Wink T_T"];
+    var xValues = ["BEST NIGHT EVER \^_^/ !!", "good", "eh... it was okay ", "not so great", "didn't sleep a wink T_T"];
     var yValues = [{{ A | safe}}, {{ B | safe}}, {{ C | safe}}, {{ D | safe}}, {{ E | safe}}];
     var barColors = ["#FFCACA", "#FEEDB1","#BCF6E1", "#B5E6FA", "#FAC9F8"];
     
